Fix build by removing external Maven dependency requirement